# IMAPReportCollector

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
docker/: Dockerfile  compose.yaml  docker-compose.yaml
src/: __main__.py  email_monitoring.py  email_processing.py  environment_init_vars.py  environment_settings.py  err_handling.py  ftp_adapter.py  ftp_configs.py  logging_config.py  rich_custom.py  send_alert_email.py
src/imap_report_collector/: __main__.py  email_monitoring.py  email_processing.py  environment_init_vars.py  environment_settings.py  ftp_configs.py  startup.py
typings/heartrate/: __init__.pyi  core.pyi  files.pyi
