[project]
  name            = "imap-report-collector"
  version         = "0.3.3"
  requires-python = ">=3.14"
  dependencies    = [
    "aeth-ext[sftp,async]>=2.0.4",
    "aiologic>=0.16.0",
    "heartrate>=0.2.2",
    "imap-tools>=1.11.1",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "tzdata>=2026.1",
  ]

[dependency-groups]
  dev = [
    "poe-tasks>=1.1.0",
    "poethepoet>=0.46.0",
    "pyright>=1.1.411",
  ]

[build-system]
  requires      = ["uv_build>=0.11.2,<0.12.0"]
  build-backend = "uv_build"

[tool.poe]
  include_script = "poe_tasks:tasks"

[tool.pyright]
  extends = "../pyproject.toml"

[tool.ruff]
  extend = "../pyproject.toml"

  src = ["./src"]

[tool.uv]
  environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
  ]

  [tool.uv.sources]
    aeth-ext  = [
      { index = "SFTPyPI", marker = "sys_platform == 'linux'" },
      { path = "../aeth_ext", editable = true, marker = "sys_platform == 'win32'" }
    ]
    poe-tasks = [{ index = "SFTPyPI" }]

  [[tool.uv.index]]
    name        = "SFTPyPI"
    url         = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/+simple"
    publish-url = "https://pypi.sweetfiretobacco.com/jacob.ogden/internal/"
    explicit    = true
